--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 
     <!-- Sidebar -->
     <div class="bg-light border-right" id="sidebar-wrapper">
-      <div class="sidebar-heading">권민수님의 이력서 </div>
+      <div class="sidebar-heading"><a href="{% url 'intro:resume' %}">권민수님의 이력서</a> </div>
       <div class="list-group list-group-flush">
         <a href="{% url 'intro:resume' %}" class="list-group-item list-group-item-action bg-light">이력보기</a>
         <a href="{% url 'intro:coverletter' %}" class="list-group-item list-group-item-action bg-light">자기소개란</a>
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="{% url 'intro:main' %}">메인화면 <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{% url 'intro:resume' %}">메인화면 <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://github.com/libertyfromthinking/">Git</a>
