--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,73 +1,35 @@
 {% extends "index.html" %}
 {% load staticfiles %}
 {% block content %}
-  <!-- Breadcrumb Area Start -->
-    <div class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/16.jpg);">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center">
-                <div class="col-12">
-                    <div class="breadcrumb-content text-center">
-                        <h2 class="page-title">기술스택</h2>
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb justify-content-center">
-                                <li class="breadcrumb-item"><a href="index.html">Tech</a></li>
-                            </ol>
-                        </nav>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Breadcrumb Area End -->
-
-    <!-- About Us Area Start -->
-    <section class="roberto-about-us-area section-padding-100-0">
-        <div class="container">
-            <div class="row align-items-center">
+<style>
+.form-control{
+    width:40%;
+    heigth:30px;
+}
+</style>
+<br>
+                <h2>로그인</h2>
+                <br>
                <form action="." method="post">{% csrf_token %}
                {% if form.errors %}
                입력값이 올바르지 않습니다.
                {% endif %}
-
-               <p>id와 패스워드를 입력해주십시오.</p>
-
-               <fieldset class="aligned">
-               <div class="form-row">
-               {{form.username.label_tag}}{{form.username}}
-               </div>
-               <div class="form-row">
-               {{form.password.label_tag}}{{form.password}}
-               </div>
-               </fieldset>
                 
-               <div class="submit-row">
-               <input type="submit" value="로그인"/>
+               <fieldset class="aligned">
+               <div class="form-row" style="line-height:2.4em;">
+               ID : &nbsp;<input class="form-control" type="text" name="username" autofocus="" required="" id="id_username">
+               &nbsp;&nbsp;&nbsp;&nbsp;<input class="btn btn-outline-secondary btn-sm" type="submit" value="로그인"/>
                <input type="hidden" name="next" value="{{next}}"/>
                </div>
+               <div class="form-row">
+               PW : &nbsp;<input type="password" name="password" required="" class="form-control" id="id_password">
+               
+               </div>
+               </fieldset>
+                <br>
+               
+               
+               
                </form>
-            </div>
-        </div>
-    </section>
-   <!-- About Us Area End -->
-
-     <!-- Video Area Start -->
-    <div class="roberto--video--area bg-img bg-overlay jarallax section-padding-0-100" style="background-image: url(img/bg-img/20.jpg);">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center justify-content-center">
-                
-            </div>
-        </div>
-    </div>
-    <!-- Video Area End -->
-
-    <!-- Service Area Start -->
-    <section class="roberto-service-area section-padding-100-0">
-        <div class="container">
-           
-           
-        </div>
-    </section>
-    <!-- Service Area End -->
-
     
 {% endblock %}
