--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,55 +1,9 @@
 {% extends "index.html" %}
 {% load staticfiles %}
 {% block content %}
-  <!-- Breadcrumb Area Start -->
-    <div class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/16.jpg);">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center">
-                <div class="col-12">
-                    <div class="breadcrumb-content text-center">
-                        <h2 class="page-title">기술스택</h2>
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb justify-content-center">
-                                <li class="breadcrumb-item"><a href="index.html">Tech</a></li>
-                            </ol>
-                        </nav>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Breadcrumb Area End -->
-
-    <!-- About Us Area Start -->
-    <section class="roberto-about-us-area section-padding-100-0">
-        <div class="container">
-            <div class="row align-items-center">
-                <p>패스워드가 변경되었습니다.</p>
-                <a href="{% url 'intro:main' %}">메인화면 가기</a>
-               </div>
-            </div>
-        </div>
-    </section>
-   <!-- About Us Area End -->
-
-     <!-- Video Area Start -->
-    <div class="roberto--video--area bg-img bg-overlay jarallax section-padding-0-100" style="background-image: url(img/bg-img/20.jpg);">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center justify-content-center">
+<br> 
+             <h2>패스워드가 변경되었습니다.</h2>
+             <a role="button" class="btn btn-outline-secondary btn-sm" href="{% url 'intro:main' %}">메인화면 가기</a>
                 
-            </div>
-        </div>
-    </div>
-    <!-- Video Area End -->
-
-    <!-- Service Area Start -->
-    <section class="roberto-service-area section-padding-100-0">
-        <div class="container">
-           
-           
-        </div>
-    </section>
-    <!-- Service Area End -->
-
     
 {% endblock %}
