--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,61 +1,23 @@
 {% extends "index.html" %}
 {% load staticfiles %}
 {% block content %}
-  <!-- Breadcrumb Area Start -->
-    <div class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/16.jpg);">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center">
-                <div class="col-12">
-                    <div class="breadcrumb-content text-center">
-                        <h2 class="page-title">기술스택</h2>
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb justify-content-center">
-                                <li class="breadcrumb-item"><a href="index.html">Tech</a></li>
-                            </ol>
-                        </nav>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Breadcrumb Area End -->
-
-    <!-- About Us Area Start -->
-    <section class="roberto-about-us-area section-padding-100-0">
-        <div class="container">
-            <div class="row align-items-center">
+<style>
+.form-control{
+    width:40%;
+    heigth:30px;
+}
+</style>
+<br>
+                <h2>비밀번호 변경</h2>
+                <br>
              <form action="." method="post">{% csrf_token %}
             {% if form.errors %}
             에러입니다. 다시 입력하세요<br>
             {% endif %}
-            {{form.old_password.label_tag}}{{form.old_password}}<br>
-            {{form.new_password1.label_tag}}{{form.new_password1}}<br>
-            {{form.new_password2.label_tag}}{{form.new_password2}}<br>
-            <input type="submit" value="변경하기"/>
+            기존 비밀번호 : <input type="password" name="old_password" autofocus="" required="" id="id_old_password" class="form-control"><br>
+            새로운 비밀번호 : <input type="password" name="new_password1" required="" id="id_new_password1" class="form-control"><br>
+            새로운 비밀번호(확인) : <input type="password" name="new_password2" required="" id="id_new_password2" class="form-control"><br>
+            <input type="submit" class="btn btn-outline-secondary btn-sm" value="변경하기"/>
             </form>
-            </div>
-        </div>
-    </section>
-   <!-- About Us Area End -->
-
-     <!-- Video Area Start -->
-    <div class="roberto--video--area bg-img bg-overlay jarallax section-padding-0-100" style="background-image: url(img/bg-img/20.jpg);">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center justify-content-center">
-                
-            </div>
-        </div>
-    </div>
-    <!-- Video Area End -->
-
-    <!-- Service Area Start -->
-    <section class="roberto-service-area section-padding-100-0">
-        <div class="container">
-           
-           
-        </div>
-    </section>
-    <!-- Service Area End -->
-
     
 {% endblock %}
