--- a/introduction/templates/introduction/coverletter_list.html
+++ b/introduction/templates/introduction/coverletter_list.html
@@ -9,7 +9,7 @@
 <div class="alert" style="border:0.2px solid #bcbcbc;">
 <details open="open"><summary><strong><span class="h5">{{object.question}}</span></strong></summary>
 <hr>
-<p>Traditional heading elements are designed to work best in the meat of your page content. When you need a heading to stand out, consider using a display heading—a larger, slightly more opinionated heading style. Keep in mind these headings are not responsive by default, but it’s possible to enable responsive font sizes.
+<p>{{object.answer}}
 </p></details>
 </div>
 {% endfor %}
