--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 
     <!-- Sidebar -->
     <div class="bg-light border-right" id="sidebar-wrapper">
-      <a class="text-dark" href="{% url 'intro:resume' %}"><div class="sidebar-heading bg-light">윤딴딴의 이력서 </div></a>
+      <a class="text-dark" href="{% url 'intro:resume' %}"><div class="sidebar-heading bg-light">권민수란</div></a>
       <div class="list-group list-group-flush">
         <a href="{% url 'intro:resume' %}" class="list-group-item list-group-item-action bg-light">이력보기</a>
         <a href="{% url 'intro:coverletter' %}" class="list-group-item list-group-item-action bg-light">자기소개란</a>
