--- a/board/templates/board/board_access_deny.html
+++ b/board/templates/board/board_access_deny.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-{% load staticfiles %}
+{% load static %}
 {% block content %}
    <br> 
              <h2>권한이 없습니다.</h2>
