--- a/board/templates/board/board_list.html
+++ b/board/templates/board/board_list.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-{% load staticfiles %}
+{% load static %}
 {% block content %}
 <br>
                          <h2 class="page-title">게시판</h2>
