--- a/introduction/templates/introduction/tech_project_list.html
+++ b/introduction/templates/introduction/tech_project_list.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-{% load staticfiles %}
+{% load static %}
 {% block content %}
 <br>
 <h2 class="page-title">{{tech}}로 만들어진 프로젝트</h2>
