--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-{% load staticfiles %}
+{% load static %}
 {% block content %}
                <br> 
              <h2>로그아웃 되었습니다.</h2>
