--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-{% load staticfiles %}
+{% load static %}
 {% block content %}
 <br> 
              <h2>패스워드가 변경되었습니다.</h2>
