--- a/templates/registration/register_done.html
+++ b/templates/registration/register_done.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-{% load staticfiles %}
+{% load static %}
 {% block content %}
                 <br> 
              <h2>가입해주셔서 감사합니다.</h2>
