--- a/introduction/templates/introduction/tech_list.html
+++ b/introduction/templates/introduction/tech_list.html
@@ -4,11 +4,21 @@
 <br>
 <h2 class="page-title">기술스택</h2>
 <div class="alert alert-warning alert-dismissible fade show" role="alert">
-   언어를 클릭하면 해당언어로 만든 프로젝트로 연결됩니다.
+   기술명을 클릭하면 해당기술로 만든 프로젝트로 연결됩니다.
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+	숙련도를 1-5라고 했을 때<br/>
+   1 : 참고해서 구현만 해본정도<br/>
+   2 : 학부시절 포함 최소 두가지 이상 프로젝트에 사용, 이론도 일부 공부<br/>
+   3 : 가장 자주사용하며 이론도 대부분 숙지하고있음 <br/>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
 <br>
 <table class="table table-bordered">
         <thead>
