--- a/introduction/templates/introduction/resume_list.html
+++ b/introduction/templates/introduction/resume_list.html
@@ -39,7 +39,7 @@
 <br>
 <div class="container">
   <div class="header">
-	  <img src="{{object.image.url}}"/>
+	  <img src="{{object.image.url}}" style="width:20%; height:20%;"/>
     <div class="full-name">
       <h2>
       {{object.name}}
@@ -63,7 +63,7 @@
     <div class="about">
       <span class="position">{{object.job_objective}}</span>
       <span class="desc">
-        3년간 영진전문대학에서 컴퓨터정보를 전공하였고 1년간 네트워크 서버 구축/유지보수를 했습니다. 컴퓨터공학으로 학점은행제 학사를 취득하였고 그 과정에서 자바, C, 자바스크립트, jsp, 안드로이드 등을 배웠지만 파이썬이 여러방면에서 가장 낫다고 생각하여 독학으로 공부하였습니다.
+        3년간 영진전문대학에서 컴퓨터정보를 전공하였고 1년간 네트워크엔지니어로서 보안장비구축/유지보수를 하였습니다. 컴퓨터공학으로 학점은행제 학사, 정보처리기사를 취득하였고 그 과정에서 자바, C, html, css, 자바스크립트, jsp, 안드로이드 등을 배웠지만 파이썬이 여러방면에서 가장 낫다고 생각하여 독학으로 공부하였습니다. 군대를 전역하고 학부시절 컴퓨터를 배운 22살부터 일을 그만두고 독학을 시작한 25살, 그리고 현재까지 배운것은 많지만 개발을 실무에서 겪어보지 못해선지 머리가 따라주지 않는건지 잊어버린 부분도 많습니다. 하지만 프로그래밍을 돈벌이수단이 아닌 자아실현을 위한 이상적인 방향이라 생각하는 사람이기 때문에 개발업무가 고되고 힘들다 하더라도 스스로의 행복을 위한 최적의 업무라 생각합니다.
       </span>
     </div>
   </div>
